@@ -28,10 +28,11 @@
  *  PowerPC/POWER CPU emulation.
  */
 
+#include <ctype.h>
 #include <stdio.h>
 #include <stdlib.h>
 #include <string.h>
-#include <ctype.h>
+#include <unistd.h>
 
 #include "cpu.h"
 #include "devices.h"
